[package]
name = "bmp180"
version = "0.1.0"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["dep:log"]

[dependencies]
embedded-hal-async = "1.0.0"
libm = "0.2.8"
log = { version = "0.4.20", optional = true }
