[package]
name = "bmp180"
version = "0.1.0"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
log = ["dep:log"]


[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
log = { version = "0.4.20", optional = true }
libm = "0.2.8"
