[package]
name = "bmp180"
version = "0.1.0"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
description = "A platform agnostic driver to interface with the BMP180 barometric pressure sensor."
repository = "https://github.com/JadKHaddad/bmp180"
license = "MIT OR Apache-2.0"
keywords = ["bmp180", "i2c", "embedded-hal", "no-std", "embedded"]
readme = "../README.md"

[features]
default = ["async", "blocking"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
log = ["dep:log"]
i-know-what-i-am-doing = []

[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
log = { version = "0.4.20", optional = true }
libm = "0.2.8"
