[package]
name = "bmp180-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bmp180 = { path = "../" }

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "write_read"
path = "fuzz_targets/write_read.rs"
test = false
doc = false
