[package]
name = "esp32-bmp180-example"
version = "0.0.0"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [
    "esp32",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "async",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }

esp-wifi = { version = "0.4.0", features = ["esp32"] }

embassy-embedded-hal = { version = "0.1.0" }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }

embedded-io-async = { version = "0.6.0" }
embedded-hal-async = "1.0.0"

fugit = "0.3.7"
log = "0.4.20"
static_cell = "2.0.0"

bmp180-embedded-hal = { path = "../../bmp180", default-features = false, features = [
    "async",
    "impl-debug",
] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
